# ai-assistant-backend

./: .gitignore  evaluation_docs_cache.pkl  pyproject.toml  seemingly_good_ingestion_condig.md
.github/workflows/: check.yml  evaluate_testcases.yml  generate_testcases.yml  sync_knowledge.yaml  sync_knowledge.yml
cli_frontend/: app.py  common_types.py  communication.py  config.py  utils.py
docs/: api-endpoints.md  ingestion-system.md  ingestion.md  knowledge-agent.md
evaluation/: config.py  evaluate.py  generate.py  giskard_helper.py  persistent_knowledge_base.py  utils.py
evaluation/utils/: custom_metric_generator.py  document_processor.py  gcp_helper.py  giskard_helper.py  knowlede_communication.py  persistent_knowledge_base.py
ingestion/: config.py  knowledge_builder.py  sync_pipeline.py
ingestion/interfaces/: __init__.py  interfaces.py
ingestion/loaders/: enhanced_pdf_loader.py  ocr_pdf_loader.py  pdf_loader.py
ingestion/processors/: document_processor.py
ingestion/storage_fetchers/: gcp_bucket_fetcher.py  gcp_document_uploader.py  gcp_public_uploader.py
ingestion/stores/: memory_store.py  mongo_store.py
ingestion/utils/: common.py  components.py  gcp_secret.py  logger.py
server/: analyze_similarity.ipynb  analyze_similarity_scores.py  app.py
server/api/: common_types.py  endpoints.py
server/bll/agents/: NIKObudaKnowledgeAgent.py  __init__.py  base_agent.py  knowledge.py  pompts.py
server/bll/agents/contextualizer_agent/: __init__.py  contextualizer_agent.py  prompt.py
server/bll/agents/knowledge_agent/: knowledge_agent.py  prompts.py
server/bll/services/: __init__.py  relevance_service.py
server/core/: __init__.py  components.py  config.py  interfaces.py  logger.py
server/core/config/: config.py
server/core/models/: models.py
server/core/utils/: components.py  gcp_public_uploader.py  public_document_helper.py  relevance.py
server/dal/: mongo_db.py  tavily_websearch.py
server/dal/mocks/: __init__.py  mock_retriever.py  mock_websearch.py
server/utils/: components.py  config.py  langdetect.py  logger.py  public_document_helper.py  safe_utils.py
terraform/dev/: main.tf  terraform.tfstate  terraform.tfstate.backup
